<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/add_dialog"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@+id/linear_layout">

        <EditText
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:id="@+id/editEng"
            android:layout_gravity="center_horizontal"
            android:textColor="#000000"
            android:layout_marginEnd="17dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:inputType="textCapWords"
            android:layout_alignParentLeft="false" />

        <EditText
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:id="@+id/editUkr"
            android:layout_gravity="center_horizontal"
            android:textColor="#000000"
            android:layout_below="@+id/editEng"
            android:layout_alignStart="@+id/editEng"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/engDialog"
            android:textColor="@color/blue"
            android:paddingLeft="10dp"
            android:layout_alignParentStart="false"
            android:layout_alignBaseline="@+id/editEng" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ukrDialog"
            android:textColor="@color/blue"
            android:paddingLeft="10dp"
            android:layout_alignParentStart="true"
            android:layout_alignBaseline="@+id/editUkr" />

        <Button
            android:id="@+id/add"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editUkr"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:text="@string/add"
            android:textColor="@color/darkBlue" />

        <Button
            android:id="@+id/cancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/add"
            android:layout_marginTop="2dp"
            android:layout_marginRight="10dp"
            android:text="@string/close"
            android:textColor="@color/darkBlue" />

    </RelativeLayout>

</RelativeLayout>
