<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:text="Зміна запису"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="Для змінення запису, заповнить необхідні поля та натисніть Змінити."
            android:paddingLeft="5dp"
            android:textSize="15sp"

            />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@+id/linear_layout">
        <EditText
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:id="@+id/editEng"
            android:layout_gravity="center_horizontal"
            android:textColor="#000000"
            android:layout_marginEnd="17dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:inputType="textCapWords"
            android:layout_alignParentLeft="false" />

        <EditText
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:id="@+id/editUkr"
            android:layout_gravity="center_horizontal"
            android:textColor="#000000"
            android:layout_below="@+id/editEng"
            android:layout_alignStart="@+id/editEng"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/engDialog"
            android:id="@+id/textView3"
            android:textColor="#000000"
            android:paddingLeft="10dp"
            android:layout_alignParentStart="false"
            android:layout_alignBaseline="@+id/editEng" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ukrDialog"
            android:id="@+id/textView4"
            android:textColor="#000000"
            android:paddingLeft="10dp"
            android:layout_alignParentStart="true"
            android:layout_alignBaseline="@+id/editUkr" />

        <Button
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:id="@+id/edit"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/darkBlue"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="90dp"
            android:layout_below="@+id/editUkr"
            android:layout_alignParentStart="false" />
        <Button
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:id="@+id/cancel"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/darkBlue"
            android:layout_alignTop="@+id/edit"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>


</RelativeLayout>